wrap fix again

--- a/pages/CV/components/JobCard/JobCard.module.css
+++ b/pages/CV/components/JobCard/JobCard.module.css
@@ -19,6 +19,7 @@
   font-size: var(--font-size-small);
   max-width: 100%;
   text-wrap: wrap;
+  white-space: normal;
   margin-bottom: var(--spacing-medium);
 }
 
